--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -34,22 +34,23 @@ jobs:
           - name: Login to Docker 
             uses: docker/login-action@v1 
             with:
-              username: ${{ secrets.MY_LOGIN }}
-              password: ${{ secrets.MY_PASS }}
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
           - name: Push to Docker Hub
             uses: docker/build-push-action@v2 
             with:
               context: backend/
               push: true
-              tags: themasterid/foodgram_backend:latest
+              tags: chekunkovivan/foodgram_backend:latest
           - name: Push frontend
             uses: docker/build-push-action@v2 
             with:
               context: frontend/
               push: true
-              tags: themasterid/foodgram_frontend:latest
+              tags: chekunkovivan/foodgram_frontend:latest
 
   deploy:
+      name: Deploy on server
       if: ${{ github.ref }} == 'master'
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
@@ -62,8 +63,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull themasterid/foodgram_backend:latest
-            sudo docker pull themasterid/foodgram_frontend:latest
+            sudo docker pull chekunkovivan/foodgram_backend:latest
+            sudo docker pull chekunkovivan/foodgram_frontend:latest
             cd infra/
             sudo docker-compose stop
             sudo docker-compose rm backend
@@ -85,7 +86,6 @@ jobs:
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
             echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> .env
-            echo DEBUG=False >> .env
             sudo docker-compose up -d --build
 
 
