--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -21,7 +21,7 @@ jobs:
           script: |
             sudo docker pull chekunkovivan/foodgram_backend:latest
             sudo docker pull chekunkovivan/foodgram_frontend:latest
-            cd foodgram-project-react/infra/
+            cd infra/
             sudo touch .env
             sudo docker-compose stop
             sudo docker-compose rm backend
@@ -33,7 +33,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd foodgram-project-react/infra/
+            cd infra/
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
