--- a/infra/default.conf
+++ b/infra/default.conf
@@ -1,9 +1,8 @@
 server {
 
     listen 80;
-    server_name 127.0.0.1, localhost 51.250.6.88;
+    server_name 51.250.6.88;
     server_tokens off;
-    client_max_body_size 20M;
 
     location /static/admin/ {
         root /var/html/;
@@ -18,7 +17,7 @@ server {
     }
 
     location /admin/ {
-        proxy_pass http://backend:8000/admin/;
+        proxy_pass http://backend:8000/;
     }
 
     location /api/docs/ {
@@ -31,7 +30,7 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/api/;
     }
 
     location / {
@@ -48,11 +47,4 @@ server {
         root   /var/html/frontend/;
     }
     
-}
-
-
-server {
-    listen 80;
-    server_name yatubeweb.sytes.net yatubeweb.sytes.net 51.250.6.88;
-    return 301 https://$host$request_uri;
 }
