--- a/infra/default.conf
+++ b/infra/default.conf
@@ -17,7 +17,7 @@ server {
     }
 
     location /admin/ {
-        proxy_pass http://backend:8000/;
+        proxy_pass http://backend:8000/admin/;
     }
 
     location /api/docs/ {
