--- a/infra/default.conf
+++ b/infra/default.conf
@@ -21,8 +21,7 @@ server {
     }
 
     location /api/docs/ {
-        root /var/html;
-        try_files $uri $uri/redoc.html;
+        proxy_pass http://backend:8000/api/docs/redoc.html;
     }
 
     location /api/ {
