--- a/infra/default.conf
+++ b/infra/default.conf
@@ -4,6 +4,7 @@ server {
     server_name 51.250.6.88;
     server_tokens off;
 
+
     location /static/admin/ {
         root /var/html/;
     }
@@ -21,7 +22,9 @@ server {
     }
 
     location /api/docs/ {
-        proxy_pass http://backend:8000/api/docs/redoc.html;
+        root /usr/share/nginx/html;
+        index redoc.html
+        try_files $uri $uri/redoc.html;
     }
 
     location /api/ {
