--- a/infra/default.conf
+++ b/infra/default.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name 51.250.6.88;
+    server_name 127.0.0.1, localhost, 51.250.6.88;
     server_tokens off;
 
 
@@ -19,12 +19,6 @@ server {
 
     location /admin/ {
         proxy_pass http://backend:8000/admin/;
-    }
-
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        index redoc.html
-        try_files $uri $uri/redoc.html;
     }
 
     location /api/ {
