--- a/infra/default.conf
+++ b/infra/default.conf
@@ -21,6 +21,11 @@ server {
         proxy_pass http://backend:8000/admin/;
     }
 
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.yaml;
+    }
+
     location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
