--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
+      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ../docs/redoc.yaml:/usr/share/nginx/html/api/docs/redoc.yaml
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
