--- a/infra/default.conf
+++ b/infra/default.conf
@@ -22,8 +22,8 @@ server {
     }
 
     location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.yaml;
+        root /var/html/static;
+        try_files $uri $uri/ /redoc.html;
     }
 
     location /api/ {
